example-organization/example-webserver/stage/services/webserver-cluster/main.tf
terraform {
  backend "s3" {
    bucket                  = "terraform-sgon-example-state"
    key                     = "stage/services/webserver-cluster/terraform.tfstate"
    region                  = "us-east-2"

    dynamodb_table          = "terraform-sgon-example-locks"
    encrypt                 = true
  }
}

provider "aws" {
  region                = "us-east-2"
}

data "aws_vpc" "default" {
  default               = true
}

data "aws_subnets" "default" {
  filter {
    name                = "vpc-id"
    values              = [data.aws_vpc.default.id] 
  }
}

data "terraform_remote_state" "db" {
  backend = "s3"

  config = {
    bucket              = "terraform-sgon-example-state"
    key                 = "stage/data-stores/mysql/terraform.tfstate"
    region              = "us-east-2"
  }
}

resource "aws_security_group" "instance" {
  name = "terraform-example-instance"

  ingress {
    from_port           = var.server_port
    to_port             = var.server_port
    protocol            = "tcp"
    cidr_blocks         = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "alb" {
  name = "terraform-example-alb"

  ingress {
    from_port           = 80
    to_port             = 80
    protocol            = "tcp"
    cidr_blocks         = ["0.0.0.0/0"]
  }

  egress {
    from_port           = 0
    to_port             = 0
    protocol            = "-1"
    cidr_blocks         = ["0.0.0.0/0"]
  }
}

resource "aws_lb" "example" {
  name                  = "terraform-asg-example"
  load_balancer_type    = "application"
  subnets               = data.aws_subnets.default.ids
  security_groups       = [aws_security_group.alb.id] 
}

resource "aws_lb_listener" "http" {
  load_balancer_arn     = aws_lb.example.arn
  port                  = 80
  protocol              = "HTTP"

  default_action {
    type                = "fixed-response"

    fixed_response {
      content_type      = "text/plain"
      message_body      = "404: page not found"
      status_code       = 404
    }
  }
  
}

resource "aws_lb_target_group" "asg" {
  name                  = "terraform-asg-example"
  port                  = var.server_port
  protocol              = "HTTP"
  vpc_id                = data.aws_vpc.default.id

  health_check {
    path                = "/"
    protocol            = "HTTP"
    matcher             = "200"
    interval            = 15
    timeout             = 3
    healthy_threshold   = 2
    unhealthy_threshold = 2
  }
  
}

resource "aws_lb_listener_rule" "asg" {
  listener_arn          = aws_lb_listener.http.arn
  priority              = 100

  condition {
    path_pattern {
      values            = ["*"]
    }
  }

  action {
    type                = "forward"
    target_group_arn    = aws_lb_target_group.asg.arn
  }
  
}

resource "aws_autoscaling_group" "exemplo" {
  vpc_zone_identifier   = data.aws_subnets.default.ids
  target_group_arns     = [aws_lb_target_group.asg.arn]
  health_check_type     = "ELB"
  min_size              = var.scaling_ec2.min_size
  max_size              = var.scaling_ec2.max_size

  launch_template {
    id      = aws_launch_template.example.id
    version = "$Latest"
  }

  tag {
    key                 = "Name"
    value               = "terraform-asg-example"
    propagate_at_launch = true
  }
}

resource "aws_launch_template" "example" {
  name          = "terraform-asg-example"
  image_id      = "ami-0fb653ca2d3203ac1"
  instance_type = "t2.micro"

  vpc_security_group_ids = [aws_security_group.instance.id]

  user_data     = base64encode(templatefile("user-data.sh", {
    server_port = var.server_port
    db_address  = data.terraform_remote_state.db.outputs.address
    db_port     = data.terraform_remote_state.db.outputs.port
  }))

  tag_specifications {
    resource_type = "instance"

    tags = {
      Name = "terraform-asg-example"
    }
  }
}
